--- a/blog/first-post/index.mdx
+++ b/blog/first-post/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: First Blog Post!!!
 date: 2021-11-25
+hero_image: "./anthony-duran-eLUBGqKGdE4-unsplash.jpg"
+hero_image_alt: "A grey and white pitbull wading happily in a pool"
+hero_image_credit_text: "Anthony Duran"
+hero_image_credit_link: "https://unsplash.com/photos/eLUBGqKGdE4"
 ---
 
 # Yay
