--- a/blog/my-nerdy-origin-story/index.mdx
+++ b/blog/my-nerdy-origin-story/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: My Nerdy Origin Story :)
 date: 2021-12-23 21:26:27
+status: draft
 hero_image: "./intellivision_mlb_baseball.png"
 hero_image_alt: "A screen shot of Intellivision MLB Baseball"
 hero_image_credit_text: "Copyright Mattel/The Blue Sky Rangers"
