Give my wife credit for her awesome photo :)

--- a/blog/this-is-mine/index.mdx
+++ b/blog/this-is-mine/index.mdx
@@ -3,7 +3,7 @@ title: This Is Mine.
 date: 2022-01-01
 hero_image: "./Cookie_And_Pooh.png"
 hero_image_alt: "My Chiweenie Hanging Out With Winnie The Pooh"
-hero_image_credit_text: I took this photo :)
+hero_image_credit_text: My wife took this photo :)
 status: published
 ---
 
